Made some modifications, now "Enter" submits the data in the TextFields